--- a/web/WEB-INF/classes/exampleconfig.properties
+++ b/web/WEB-INF/classes/exampleconfig.properties
@@ -4,5 +4,6 @@ adminDN=CN\=Administrator,CN\=Users,DC\=internal,DC\=waller,DC\=biz
 baseOU=
 ldapString=ldap\://walldc1.internal.waller.biz\:636
 searchBase=DC\=internal,DC\=waller,DC\=biz
-defaultUserOU=OU\=Family,DC\=internal,DC\=waller,DC\=biz
+defaultUserOU=OU\=Users,DC\=internal,DC\=waller,DC\=biz
 domainSuffix=internal.waller.biz
+encryptionKey=s0meR@ndomStr!ng
