Exchange compatibility added Moved smtp and authorisation user email address to properties file

--- a/web/WEB-INF/classes/exampleconfig.properties
+++ b/web/WEB-INF/classes/exampleconfig.properties
@@ -6,3 +6,7 @@ ldapString=ldap\://walldc1.internal.waller.biz\:636
 searchBase=DC\=internal,DC\=waller,DC\=biz
 defaultUserOU=OU\=Family,DC\=internal,DC\=waller,DC\=biz
 domainSuffix=internal.waller.biz
+HomeMDB=CN\=MailboxDatabase,CN\=Databases,CN\=Exchange Administrative Group (FYDIBOHF23SPDLT),CN\=Administrative Groups,CN\=Waller,CN\=Microsoft Exchange,CN\=Services,CN\=Configuration,DC\=internal,DC\=waller,DC\=biz
+msExchHomeServerName=/o\=Waller/ou\=Exchange Administrative Group (FYDIBOHF23SPDLT)/cn\=Configuration/cn\=Servers/cn\=WALLEXCH
+authAddress=receivable@example.com
+smtpServer=mail.example.com
